--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <p class="level-choice">Выбери сложность</p>
+      <div class="level">
+        <div class="level-item">1</div>
+        <div class="level-item">2</div>
+        <div class="level-item">3</div>
+      </div>
+      <a href="#" class="start-button">Старт</a>
+    </div>
+  </body>
 </html>
