--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container">
-      <p class="level-choice">Выбери сложность</p>
-      <div class="level">
-        <div class="level-item">1</div>
-        <div class="level-item">2</div>
-        <div class="level-item">3</div>
+    <main class="main">
+      <div class="container">
+        <p class="level-choice">Выбери сложность</p>
+        <div class="level">
+          <div class="level-item">1</div>
+          <div class="level-item">2</div>
+          <div class="level-item">3</div>
+        </div>
+        <a href="#" class="start-button">Старт</a>
       </div>
-      <a href="#" class="start-button">Старт</a>
-    </div>
+    </main>
   </body>
 </html>
