--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Запоминаем карты</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <main class="main">
-      <div class="container">
+        <form class="container">
         <p class="level-choice">Выбери сложность</p>
         <div class="level">
           <div class="level-item">1</div>
           <div class="level-item">2</div>
           <div class="level-item">3</div>
         </div>
-        <a href="#" class="start-button">Старт</a>
-      </div>
+        <button type="submit" class="start-button">Старт</button>
+    </form>
     </main>
   </body>
 </html>
