--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <main class="main">
         <form class="container">
         <p class="level-choice">Выбери сложность</p>
-        <div class="level">
-          <div class="level-item">1</div>
-          <div class="level-item">2</div>
-          <div class="level-item">3</div>
+        <div class="level" id="levels">
+          <!-- рендерится из js -->
         </div>
         <button type="submit" class="start-button">Старт</button>
     </form>
     </main>
   </body>
 </html>
-<script src="index.js"></script>
+<script src="./index.js"></script>
