add a css-optimization

--- a/card-game/index.html
+++ b/card-game/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Запоминаем карты</title>
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" src="./styles.css" />
     </head>
     <body>
         <div class="main" id="first"></div>
